<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="5dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dragView"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_baseline_drag_indicator_24"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/goalTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goal_title_main_List"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:textSize="21sp"
                    android:layout_marginStart="15dp" />

                <TextView
                    android:id="@+id/goalDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/date_text_view_field"
                    android:layout_marginStart="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom">

                <ImageView
                    android:id="@+id/deleteGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_baseline_delete_24"
                    android:contentDescription="@string/delete_goal"
                    android:layout_marginEnd="5dp" />

                <ImageView
                    android:id="@+id/updateGoals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_baseline_edit_24"
                    android:contentDescription="@string/edit_goal"
                    android:layout_marginEnd="5dp" />


                <ImageView
                    android:id="@+id/expandView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                    android:contentDescription="@string/expand_goal"
                    android:layout_marginEnd="5dp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/expandMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/addSubTaskHere"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"/>



            <ImageView
                android:id="@+id/collapseView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
                android:contentDescription="@string/collapse_icon"
                android:layout_marginEnd="5dp" />

        </LinearLayout>



    </LinearLayout>



    </androidx.cardview.widget.CardView>












